<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">JustJava</string>
    <string name="action_settings">Settings</string>

    <!-- Header text for the list of toppings [CHAR LIMIT=20] -->
    <string name="tasty_coffee">Tasty coffee is one tap away!</string>
    <string name="name_placeholder">Name</string>
    <string name="quantity">Quantity</string>
    <string name="toppings">Toppings</string>
    <string name="order_summary">Order summary</string>

    <string name="order">Order</string>



    <string name="order_summary_name">Name: <xliff:g id="name" example="Amy">%s</xliff:g> </string>

    <string name="whipped_cream">Add Whipped Cream? </string>
    <string name="chocolate_topping">Add Chocolate topping? </string>
    <string name="total">Total: </string>
    <string name="thank_you">Thank you!</string>


    <string name="order_summary_subject">JustJava order for: \n<xliff:g id="name" example="Amy">%s</xliff:g> </string>

</resources>
